реализация эндпоинтов months tonnage type - get delete post
